--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyPersonalDiary</string>
+    <string name="loading_please_wait">Loading Please Wait</string>
 </resources>
