partial implementation of register flow from login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="close">Close</string>
     <string name="yes_logout">Yes, Logout</string>
     <string name="no_stay">No, Stay</string>
+    <string name="change_password">Change Password</string>
 </resources>
