--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
     <string name="new_password">New Password</string>
     <string name="confirm_new_password">Confirm New Password</string>
     <string name="change">Change</string>
+    <string name="profile">Profile</string>
+    <string name="user_name_already_exists">Username already exists, please use different username</string>
+    <string name="welcome_with_name">Welcome %s</string>
+    <string name="password_changed_successfully">Password changed successfully</string>
+    <string name="could_not_change_password">Password change unsuccessful, please try again</string>
 </resources>
